# hackathon-0-ditial-fte

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: create-plan.md  linkedin-post.md  process-emails.md  weekly-briefing.md
.claude/skills/: AGENT_SKILL_INTEGRATION.md  IMPROVEMENTS.md  INDEX.md
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md.md  Dashboard.md.md
AI_Employee_Vault/.obsidian/: graph.json  workspace.json
AI_Employee_Vault/Approved/: APPROVAL_Invoice_Request_Project_Alpha_500USD.md  FACEBOOK_DRAFT_Ahmed_Corp_Project_2026-02-28_151322.md  LINKEDIN_DRAFT_Automating_Client_Communication.md
AI_Employee_Vault/Done/: EMAIL_Ibad_your_password_was_successfully_reset_19c90f14.md  EMAIL_Invoice_Request_-_Project_Alpha_19c97d52.md  EMAIL_Subscription_to_Home_Wireless_Advance_successful_19c805fd.md  (+29 more)
docs/: GOLD_TIER_ARCHITECTURE.md  GOLD_TIER_TEST_GUIDE.md  SILVER_TIER_SETUP.md  SILVER_TIER_TEST_GUIDE.md  WHAT_IS_THIS_PROJECT.md  linkedin_playwright_setup.md
drop_folder/: client_brief.txt  invoice_request.txt  test_task.txt
mcp_server/: email_server.py  facebook_playwright.py  instagram_playwright.py  odoo_mcp.py  social_playwright_base.py  twitter_playwright.py
scripts/: create_placeholder.py  setup_social_sessions.py
services/: audit_logger.py  error_handler.py  linkedin_poster.py  ralph_loop.py  scheduler.py  session_manager.py  social_media_manager.py
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  whatsapp_watcher.py
(+203 files in other folders)
